[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/small_circle.png" type="Texture" id=1]
[ext_resource path="res://EditorElement.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="EditorElement" type="Area2D" groups=[
"editorelement",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_EditorElement_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EditorElement_mouse_exited"]
